--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,14 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
+
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
+  flutter_svg: ^0.22.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
